

2.1 - ??/??/2006
----------------
* Changed freshness logic so that passive checks don't immediately go stale after program restart
* Bug fix for minor memory leak in object cleanup code
* Bug fix for flapping notifications during scheduled downtime
* Bug fix for $TOTALHOSTSDOWNUNHANDLED$ macro
* Bug fix in sample minimal.cfg file
* Bug fix in status CGI when displaying servicegroups
* Bug fix in computation of indeterminate time in availability CGI
* Bug fix with not deleting all comments associated with a service



2.0 - 02/07/2006
----------------
* Fix for segfault in timed event queue
* Removed length limitations for object vars/vals
* Updated config.sub and config.guess to versions from automake-1.9
* Doc updates



2.0rc2 - 01/10/2006
-------------------
* Fix for initialization of embedded Perl interpreter
* Fix for potential duplicate membership entry bug in (host/service/contact)groups
* Minor documentation updates



2.0rc1 - 12/27/2005
-------------------
* Event broker modifications:
	- Minor change to log timestamps
	- Changes to notification, check, event handler, and system command callbacks
	- Addition of acknowledgement callbacks
	- Addition of state change callbacks
* Minor bug fix to statuswml CGI
* Minor spec file updates
* Minor include file fix to remove duplicate _REENTRANT definitions affecting embedded Perl
* Bug fix in template resolution of contactgroups variable in contact definitions
* Fixed bug with comments not expiring (for some reason this was not previously implemented!)
* Minor embedded Perl changes
* Fixed bug with non-registered objects in wildcard/regex templates
* Added configure script option to disable use of nanosleep() in event queue
* Improvements to circular path/dependency checks to prevent segfaults
* Minor documentation updates



2.0b6 - 11/30/2005
------------------
* Changed license to specifically state GPL version 2
* Minor fixes to sample nagios.cfg config file
* Fix for non-US date formats in command CGI